<resources>
    <string name="app_name">venu_alpha</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="parse_application_id">xtZi12Eeni8GisCpZhvJsF3pP1pHJpYlVrD8yeoM</string>
    <string name="parse_client_key">g8cblrIELVqYXgobmdtPgVgO7DLglK8dp2P2pRu0</string>
    <string name="title_activity_main">Venu</string>
    <string name="sender_id">id:380463770133</string>
    <string name="facebook_app_id">881732875296568</string>
    <string name="application_key">1642638ea242e141ae2c476020f406b75</string>
    <string name="default_server_url">https://apps.applozic.com</string>
    <string name="default_media_location_folder">YOUR_APP_NAME</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAkuRmCU-nm8OHWqp4r7j0OGnAtI3_Z9PE</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="prompt_email">Enter Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Login</string>
    <string name="action_sign_in">sing in button</string>
    <string name="error_field_required">Valid  Email Required</string>
    <string name="error_invalid_email">Valid Email Required</string>
    <string name="prompt_username">Username</string>
    <string name="title_activity_post_new_peep">New Peep</string>
    <string name="hint_reply">enter comment</string>
    <string name="message_elipses">messagin..</string>
    <string name="prompt_message">message ..</string>
    <string name="login_activity_main">LoginActivity</string>
    <string name="signup_activity_main">Signup</string>
    <string name="comment_activity_main">CommentActivity</string>
    <string name="onboard_activity_main">Onboard</string>
    <string name="title_activity_sub_main">SubMainActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_conversations">ConversationsActivity</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="title_activity_main_test">ChatActivity</string>
    <string name="title_activity_conversation">Conversation</string>
    <string name="title_activity_chat_view">Chat</string>
    <string name="title_activity_discover">Discover</string>
    <string name="title_activity_new_conversation">New</string>
    <string name="title_activity_tabbed_test">TabbedTest</string>
    <string name="title_activity_tab2">Tab2Activity</string>
    <string name="Message">Chat</string>
    <string name="notification">notification</string>
    <string name="Search">search</string>
    <string name="title_activity_gallery">Gallery</string>
    <string name="title_activity_photo_view">PhotoView</string>
    <string name="title_activity_video">Video</string>
    <string name="title_activity_gallery_slide">Media</string>
    <string name="title_activity_post_event">Create Event</string>
    <string name="title_activity_event_post">Post Event</string>
    <string name="title_activity_media_post">Peep</string>
    <string name="title_activity_notification">NotificationActivity</string>
    <string name="prev">prev</string>
    <string name="next">next</string>
    <string name="title_activity_event_page">Event</string>
    <string name="a_function_that_creates_a_new_instance_of_the_fragment">A function that creates a new instance of the fragment</string>
    <string name="title_activity_circle">Circle</string>
    <string name="title_activity_event_manger">Events</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_settings_dialog">Enable in settings</string>
    <string name="setting">proceed</string>
    <string name="cancel">cancel</string>
    <string name="rationale_ask_again">Require some permission to work</string>
    <string name="rationale_camera">Require Camera to work properfly</string>
    <string name="requestLocaion">Requires Location to work properly</string>
    <string name="rationale_location_contacts">Enable to sync your contacts with other users</string>
    <string name="title_activity_expanded_category">ExpandedCategoryActivity</string>
    <string name="title_activity_user_profile">Profile</string>
    <string name="title_activity_channel_page">Channel</string>
    <string name="title_activity_discover_v3">Discover</string>
    <string name="title_activity_event_post_v4">Create Event</string>
    <string name="title_activity_test_discover_activty">Discover</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_on_tap_v2">OnTap</string>
    <string name="title_activity_event_page_v2">EventPage</string>
    <string name="title_activity_comment">CommentActivity</string>
    <string name="title_activity_comment_v3">Comment</string>
    <string name="title_activity_challange_viewer">ChallangeViewerActivity</string>
    <string name="title_activity_event_post_v5">EventPostV5Activity</string>
    <string name="title_activity_on_tap_v4">OnTapV4Activity</string>
    <string name="title_activity_event_manager_v3">Event</string>
    <string name="title_activity_post_event_v2">Create Event</string>
    <string name="live_available">Live</string>
    <string name="title_activity_post_map">"Location "</string>
    <string name="live_now">LIVE NOW</string>
    <string name="welcome_select_account">Welcome, let get you ready</string>
    <string name="setup_profile_msg">Please choose a picture :</string>
    <string name="gossip_hint">Juicy Title</string>
    <string name="permission_contact">For Better experience we need your permission to access contact</string>
    <string name="events">Events</string>
    <string name="nav_circle">Circle</string>
    <string name="nav_discover">Discover</string>
    <string name="nav_ontap">OnTap</string>
    <string name="nav_manage">Profile</string>
    <string name="nav_account">Account</string>
    <string name="progress_connecting">Connecting to server</string>
    <string name="title_activity_contact">ContactActivity</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_map_events">Map</string>
    <string name="title_activity_discover_main">DiscoverMainActivity</string>


</resources>
