<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:orderInCategory="100"
        android:title="@string/Message"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_notifications"
        android:icon="@drawable/ic_bell"
        android:orderInCategory="100"
        android:title="@string/notification"

        app:showAsAction="always" />
    <item
        android:id="@+id/action_message"
        android:icon="@drawable/ic_chat"
        android:orderInCategory="100"
        android:title="@string/Search"
        app:showAsAction="always" />

</menu>
