<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/signup_sign_up_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:visibility="gone" />


        <ScrollView
            android:id="@+id/signup_sign_up_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

            <LinearLayout
                android:id="@+id/signup_email_sign_up_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">



                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/signup_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_username"

                        android:inputType="text"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/signup_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/signup_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:imeActionId="@+id/sign_up"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/signup_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="+233 23 232 2323"
                        android:inputType="phone"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <com.example.madiba.venu_alpha.ui.StateButton
                        android:id="@+id/signup_signup_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="30dp"
                        android:minHeight="@dimen/card_corner_radius_0dp"
                        android:minWidth="@dimen/card_corner_radius_0dp"
                        android:padding="@dimen/padding_normal"
                        android:text="Sign Up "
                        app:normalBackgroundColor="@android:color/white"
                        app:normalStrokeColor="@color/venu_flat_color"
                        app:normalStrokeWidth="2dp"
                        app:normalTextColor="@color/mid_grey_200"
                        app:pressedBackgroundColor="@color/venu_flat_color"
                        app:pressedTextColor="@android:color/white" />

                    <com.example.madiba.venu_alpha.ui.StateButton
                        android:id="@+id/fb_signup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="30dp"
                        android:minHeight="@dimen/card_corner_radius_0dp"
                        android:minWidth="@dimen/card_corner_radius_0dp"
                        android:padding="@dimen/padding_normal"
                        android:text="Facebook"
                        app:normalBackgroundColor="@color/venu_blue"
                        app:normalTextColor="@color/white"
                        app:pressedBackgroundColor="@color/white"
                        app:pressedTextColor="@color/venu_blue" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/bottom_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/continue_signup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/dp_10"
                        android:text="Already have an account ? "
                        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                    <com.example.madiba.venu_alpha.ui.StateButton
                        android:id="@+id/signup_goto_login"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minHeight="@dimen/card_corner_radius_0dp"
                        android:text="Log in"
                        app:normalBackgroundColor="@android:color/white"
                        app:normalTextColor="@color/venu_flat_color"
                        app:pressedBackgroundColor="@color/venu_flat_color"
                        app:pressedTextColor="@android:color/white" />


                </LinearLayout>

            </LinearLayout>


        </ScrollView>


    </RelativeLayout>


</android.support.design.widget.CoordinatorLayout>

